--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ button {
     border: none;
     border-radius: 10px;
     padding: 10px 20px;
+    margin: 0 auto 5px auto;
     color: rgb(255, 255, 255);
     background-color: var(--primary);
 }
@@ -36,8 +37,23 @@ header {
     justify-content: space-between;
 }
 
-.start-quiz {
+.container {
     display: flex;
     flex-direction: column;
     text-align: center;
+    justify-content: center;
+}
+
+.answer-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    text-align: start;
+    align-items: flex-start;
+}
+
+.question-status {
+    border-top: solid 3px gray;
+    margin: 0 auto;
+    color: gray;
 }
