--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,11 +24,29 @@ button {
     background-color: var(--primary);
 }
 
+.btn {
+    border: none;
+    border-radius: 10px;
+    padding: 10px 20px;
+    margin: 0 10px;
+    color: rgb(255, 255, 255);
+    background-color: var(--primary);
+}
+
 button:hover {
     background-color: var(--secondary);
 }
 
+.btn:hover {
+    background-color: var(--secondary);
+}
+
+
 button:active {
+    background-color: var(--tertiary);
+}
+
+.btn:active {
     background-color: var(--tertiary);
 }
 
@@ -50,6 +68,11 @@ header {
     justify-content: flex-start;
     text-align: start;
     align-items: flex-start;
+}
+
+.input-container {
+    display: flex;
+    justify-content: center;
 }
 
 .question-status {
